Created attachment 145517 [details] Impress presentation that triggers the crash version: master build as of commit 260701270abc7997996625449cd3d40f8b4f7f49 VCL: kde5 on X11 (the gtk3 VCL plugin e.g. works fine) platform: Debian testing, Plasma 5 desktop Steps to reproduce: 1) open the attached file in Impress (It's a slide that contains the "Big Buck Bunny" trailer as a video.) Result: LibreOffice crashes
Created attachment 145518 [details] GDB backtrace
Katarina Behrens committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=a9342497f309be256e6c7d43065c160378a48e1a tdf#120452: Just enough of SystemEnvData in Qt5Object It will be available in 6.2.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
The crash is gone w/ the above commit, but the video still doesn't play/there are problems, so IDK if we should continue in this ticket or open new one(s)
(In reply to Katarina Behrens (CIB) from comment #3) > The crash is gone w/ the above commit, but the video still doesn't > play/there are problems, so IDK if we should continue in this ticket or open > new one(s) Feel free to close this one as RESOLVED FIXED. I'll create a follow-up bug for the video problem...
(In reply to Katarina Behrens (CIB) from comment #3) > The crash is gone w/ the above commit, but the video still doesn't > play/there are problems, so IDK if we should continue in this ticket or open > new one(s) @Bubli, Actually the video can be played in Version: 6.2.0.0.alpha0+ Build ID: 3846561f79cf9065abd9ca83c9fbfbe7e52e28e2 CPU threads: 1; OS: Linux 4.13; UI render: default; VCL: kde5; TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-10-21_02:45:54 Locale: en-US (en_US.UTF-8); Calc: threaded 1. Open the file 2. Select the video 3. Click play on the sidebar However there're problems with the menus, I will report this...
No crash at the moment. But I can't stop video by clicking on it. Is it correct? I've created new issue https://bugs.documentfoundation.org/show_bug.cgi?id=125517 Checked with Version: 6.3.0.0.alpha1+ Build ID: 40e2a0d7039eee9c5377996da3949680903e1016 CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: kde5; TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-05-22_13:55:35 Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US Calc: threaded