tdf#120452: Just enough of SystemEnvData in Qt5Object

the video in the presentation still doesn't play but at least the
crash is gone

Change-Id: I78ab4ff9412998f235a4b44a23b0e9d3ef4143e0