vcl/qt5/Qt5Frame.cxx
@@ -140,7 +140,7 @@ Qt5Frame::Qt5Frame(Qt5Frame* pParent, SalFrameStyleFlags nStyle, bool bUseCairo)
     }
 
     m_aSystemData.nSize = sizeof(SystemEnvData);
-    //m_aSystemData.aWindow = GetNativeWindowHandle(m_pWindow);
+    m_aSystemData.aWindow = m_pQWidget->winId();
     m_aSystemData.aShellWindow = reinterpret_cast<sal_IntPtr>(this);
     //m_aSystemData.pSalFrame = this;
     //m_aSystemData.pWidget = m_pQWidget;
